--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/michaelfschropp/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/mfschropp" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:mfschropp@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/michaelfschropp/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/mfschropp" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:mfschropp@gmail.com" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
