Testing for work experience

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Thechnologies I've Used</a></li>
-						<li><a href="#three">Some Recent Work</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#three">Some Recent Projects</a></li>
+						<li><a href="#four">Where I've Worked</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -111,7 +112,10 @@
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
+											<div class="work">
+												<h4>Pittsburgh</h4>
+											</div>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
