--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<article>
 											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
 											<div class="work">
-												<h4>Pittsburgh</h4>
+												<h2>University of Pittsburgh</h2>
 											</div>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
