--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h4><i>A Few Accomplishments</i></h4>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
