--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h4><i>A Few Accomplishments</i></h4>
+									<h3>A Few Accomplishments</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
 											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
 											<div class="work">
-												<h3>University of Pittsburgh</h3>
+												<h4><i>University of Pittsburgh</i></h4>
 											</div>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
