--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
 										<article>
 											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
 											<div class="work">
-												<h4><i>University of Pittsburgh</i></h4>
+												<h4>
+													<span class="span-work">
+														<i>University of Pittsburgh</i>
+													</span>
+												</h4>
 											</div>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
