--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<article>
 											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
 											<div class="work">
-												<h4><i>University of Pittsburgh</i></h4>
+												<span class="work"><h4><i>University of Pittsburgh</i></h4></span>
 											</div>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
