--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 										<article>
 											<!--<a href="#" class=""><img src="images/pic01.jpg" alt="" /></a>-->
 											<div class="work">
-												<span class="worker"><h4><i>University of Pittsburgh</i></h4></span>
+												<span class="worker"><h4><b><i>University of Pittsburgh</b></i></h4></span>
 											</div>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h5>Student Data Analyst</h5>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
