--- a/index.html
+++ b/index.html
@@ -118,21 +118,25 @@
 											</div>
 											<div class="inner">
 												<h4>Student Data Analyst</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Prepare monthly reports for University spend. Consolidate, normalize, and analyze data using tools such as Excel, Rosslyn Analytics, Oracle, and SciQuest.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="work">
+												<span class="worker"><h3><i>Little E's Pizza</i></h3></span>
+											</div>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Delivery Driver</h4>
+												<p>Experience in a fast paced environment involving frequent multi-tasking to keep everything running smoothly. Washed dishes and prepared food while working as a delivery driver.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="work">
+												<span class="worker"><h3><i>Kitchen Collection</i></h3></span>
+											</div>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Key Holder</h4>
+												<p>Held accountable for opening and closing of the store, preparing deposits, as well as product knowledge, customer service, and sales.</p>
 											</div>
 										</article>
 									</div>
@@ -143,7 +147,7 @@
 							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Have any questions or want to reach me? Fill out the information below! Alternatively, click the email icon at the bottom of the navigation menu to get a direct link to my email!</p>
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
