--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Thechnologies I've Used</a></li>
 						<li><a href="#three">Some Recent Projects</a></li>
 						<li><a href="#four">Where I've Worked</a></li>
@@ -50,7 +50,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>About Me</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
