--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
 										<div class="row uniform">
 											<div class="12u">
 												<ul class="actions">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
+													<form action="email.php" method="post">
+														<li><input type="submit" class="special" value="Send Message" /></li>
+														<li><input type="reset" value="Reset Form" /></li>
+												</form>
 												</ul>
 											</div>
 										</div>
