--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Have any questions or want to reach me? Fill out the information below! Alternatively, click the email icon at the bottom of the navigation menu to get a direct link to my email!</p>
-									<form method="post" action="#">
+									<form method="post" action="email.php">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -161,10 +161,8 @@
 										<div class="row uniform">
 											<div class="12u">
 												<ul class="actions">
-													<form action="email.php" method="post">
-														<li><input type="submit" class="special" value="Send Message" /></li>
-														<li><input type="reset" value="Reset Form" /></li>
-												</form>
+													<li><input type="submit" class="special" value="Send Message" /></li>
+													<li><input type="reset" value="Reset Form" /></li>
 												</ul>
 											</div>
 										</div>
