--- a/index.html
+++ b/index.html
@@ -51,17 +51,16 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<p>A student looking to experience all aspects of software development and expand my skillset.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I'm currently a sophomore at the University of Pittsburgh majoring in computer science. I started programming in high school and since then, have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Technologies I've Used</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
