--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<h2>About Me</h2>
 										<p>A student looking to experience all aspects of software development and expand my skillset.</p>
 									</header>
-									<p>I'm currently a sophomore at the University of Pittsburgh majoring in computer science. I started programming in high school and since then, have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
+									<p>I'm currently a sophomore at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
 								</div>
 							</section>
 
@@ -63,12 +63,12 @@
 									<h3>Technologies I've Used</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
+										<li class="fa-code">Java, C++, C</li>
+										<li class="fa-code">HTML, CSS, Javascript, PHP, JQuery, MySQL</li>
 										<li class="fa-cubes">Stack small boxes</li>
 										<li class="fa-book">Read books and stuff</li>
 										<li class="fa-coffee">Drink much coffee</li>
 										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
 									</ul>
 								</div>
 							</section>
@@ -76,8 +76,8 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Some Recent Projects</h3>
+									<p>Listed below are some recent projects that I've worked on and some information about the project.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -107,8 +107,8 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Where I've Worked</h3>
+									<p>From office work to restaurants, each job below provided me with different skills such as communication, time management, and others, that can transfer to a variety of different jobs.</p>
 									<div class="features">
 										<article>
 											<div class="work">
@@ -175,7 +175,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Design Modified From: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
