added photo credit

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 						<div class="container">
 							<ul class="copyright">
 							<li>Design Modified From: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Banner Photo From: <a href="https://commons.wikimedia.org">Wikimedia Commons</li>
 							</ul>
 						</div>
 					</section>
