added volunteer/club info

--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@
 									<ul class="feature-icons">
 										<li class="fa-code">Java, C++, C</li>
 										<li class="fa-code">HTML, CSS, Javascript, PHP, JQuery, MySQL</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
+										<li class="fa-cubes">Windows, Mac OS, Linux</li>
+										<li class="fa-bolt">Sublime, Visual Studio, Eclipse, VIM</li>
 									</ul>
 								</div>
 							</section>
@@ -135,6 +133,19 @@
 											<div class="inner">
 												<h4>Key Holder</h4>
 												<p>Held accountable for opening and closing of the store, preparing deposits, as well as product knowledge, customer service, and sales.</p>
+											</div>
+										</article>
+										<article>
+											<div class="work">
+												<span class="worker"><h3><i>Clubs &amp Volunteer</i></h3></span>
+											</div>
+											<div class="inner">
+												<ul>
+													<li>Computer Science Club</i>
+													<li>Latrobe Revitilization Program</li>
+													<li>Saint Vincent Prevention Projects</li>
+													<li>Big Brothers Big Sister</li>
+												</ul>
 											</div>
 										</article>
 									</div>
