--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><link rel="shortcut icon" type="image/png" href="images/ms.png">Michael Schropp</link></h1>
+					<h1 id="logo"><link rel="shortcut icon" type="image/png" href="mfschropp.github.io/images/ms.png">Michael Schropp</link></h1>
 					<p>Student building developer experience.</p>
 				</header>
 				<nav id="nav">
