updates to logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="shortcut icon" type="image.png" href="images/ms.png">
 		<title>Michael Schropp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,7 +20,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><link rel="shortcut icon" type="image/png" href="ms.png">Michael Schropp</link></h1>
+					<h1 id="logo"><a href="#">Michael Schropp</a></h1>
 					<p>Student building developer experience.</p>
 				</header>
 				<nav id="nav">
