updates to logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" type="image.png" href="images/ms.png">
+		<link rel="shortcut icon" type="image.png" href="images/ms2.png">
 		<title>Michael Schropp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
