--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 											</div>
 											<div class="inner">
 												<h4>Delivery Driver</h4>
-												<p>Experience in a fast paced environment involving frequent multi-tasking to keep everything running smoothly. Washed dishes and prepared food while working as a delivery driver.</p>
+												<p>Experience in a fast paced environment involving multi-tasking to keep everything running smoothly. Washed dishes and prepared food while working as a delivery driver.</p>
 											</div>
 										</article>
 										<article>
