--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/me.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Michael Schropp</a></h1>
 					<p>Student building developer experience.</p>
 				</header>
