--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Technologies I've Used</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Filler.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Java, C++, C</li>
 										<li class="fa-code">HTML, CSS, Javascript, PHP, JQuery, MySQL</li>
@@ -81,22 +81,22 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Stuff</h4>
+												<p>Filler.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Stuff</h4>
+												<p>Filler.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Stuff</h4>
+												<p>Filler.</p>
 											</div>
 										</article>
 									</div>
