Testing this versus the desktop app

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2>About Me</h2>
 										<p>A student looking to experience all aspects of software development and expand my skillset.</p>
 									</header>
-									<p>I'm currently a sophomore at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
+									<p>I'm currently a junior at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
 								</div>
 							</section>
 
@@ -62,7 +62,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Technologies I've Used</h3>
-									<p>Filler.</p>
+									<p>Below you will see the various languages and softwares I've experienced.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Java, C++, C</li>
 										<li class="fa-code">HTML, CSS, Javascript, PHP, JQuery, MySQL</li>
