Updating the projects
Desktop app is having issues updating, so possible double commit

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 				<header>
 					<span class="image avatar"><img src="images/me.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Michael Schropp</a></h1>
-					<p>Student building developer experience.</p>
+					<p>Software Development Co-op at Abbott</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
-						<li><a href="#two">Thechnologies I've Used</a></li>
+						<li><a href="#two">Technologies I've Used</a></li>
 						<li><a href="#three">Some Recent Projects</a></li>
 						<li><a href="#four">Where I've Worked</a></li>
 						<li><a href="#five">Contact</a></li>
@@ -81,24 +81,24 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Stuff</h4>
-												<p>Filler.</p>
+												<h4>Discord Bot</h4>
+												<p>Bot created for the popular communication software Discord. Created with the use of JavaScript, Node.js, and SQLite. Allows the user to talk to the bot, search for images, and gamble points with the use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Stuff</h4>
-												<p>Filler.</p>
+												<h4>Westmoreland Drug and Alcohol Commission</h4>
+												<p>App created for the Westmoreland Drug and Alcohol Commission to spread awareness of overdose prevention kits. Created using JavaScript and the Cross-Platform MobiOne.</p>
 											</div>
 										</article>
-										<article>
+										<!--<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Stuff</h4>
 												<p>Filler.</p>
 											</div>
-										</article>
+										</article>-->
 									</div>
 								</div>
 							</section>
