--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Discord Bot</h4>
-												<p>Bot created with the use of JavaScript, Node.js, and SQLite. Allows the user to talk to the bot, search for images, and gamble points with the use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
+												<p>Bot created with the use of JavaScript, Node.js, and SQLite. Use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
 											</div>
 										</article>
 										<article>
