updates to projects

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Westmoreland Drug and Alcohol Commission</h4>
-												<p>App created for the Westmoreland Drug and Alcohol Commission to spread awareness of overdose prevention kits. Created using JavaScript and the Cross-Platform MobiOne.</p>
+												<h4>Westmoreland Drug and Alcohol</h4>
+												<p>App created to spread awareness of overdose prevention kits. Created using JavaScript and the Cross-Platform MobiOne.</p>
 											</div>
 										</article>
 										<!--<article>
