updates all around

--- a/index.html
+++ b/index.html
@@ -79,26 +79,19 @@
 									<p>Listed below are some recent projects that I've worked on and some information about the project.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Discord Bot</h4>
 												<p>Bot created with the use of JavaScript, Node.js, and SQLite. Use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Westmoreland Drug and Alcohol</h4>
 												<p>App created to spread awareness of overdose prevention kits. Created using JavaScript and the Cross-Platform MobiOne.</p>
 											</div>
 										</article>
-										<!--<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Stuff</h4>
-												<p>Filler.</p>
-											</div>
-										</article>-->
 									</div>
 								</div>
 							</section>
@@ -107,46 +100,23 @@
 							<section id="four">
 								<div class="container">
 									<h3>Where I've Worked</h3>
-									<p>From office work to restaurants, each job below provided me with different skills such as communication, time management, and others, that can transfer to a variety of different jobs.</p>
 									<div class="features">
+										<article>
+											<div class="work">
+												<span class="worker"><h3><i>Abbott</i></h3></span>
+											</div>
+											<div class="inner">
+												<h4>Co-op (Software Development)</h4>
+												<p>Use of C#, Appium, and Selenium to create automated tests for OS dependencies on mobile devices.</p>
+											</div>
+										</article>
 										<article>
 											<div class="work">
 												<span class="worker"><h3><i>University of Pittsburgh</i></h3></span>
 											</div>
 											<div class="inner">
 												<h4>Student Data Analyst</h4>
-												<p>Prepare monthly reports for University spend. Consolidate, normalize, and analyze data using tools such as Excel, Rosslyn Analytics, Oracle, and SciQuest.</p>
-											</div>
-										</article>
-										<article>
-											<div class="work">
-												<span class="worker"><h3><i>Little E's Pizza</i></h3></span>
-											</div>
-											<div class="inner">
-												<h4>Delivery Driver</h4>
-												<p>Experience in a fast paced environment involving multi-tasking to keep everything running smoothly. Washed dishes and prepared food while working as a delivery driver.</p>
-											</div>
-										</article>
-										<article>
-											<div class="work">
-												<span class="worker"><h3><i>Kitchen Collection</i></h3></span>
-											</div>
-											<div class="inner">
-												<h4>Key Holder</h4>
-												<p>Held accountable for opening and closing of the store, preparing deposits, as well as product knowledge, customer service, and sales.</p>
-											</div>
-										</article>
-										<article>
-											<div class="work">
-												<span class="worker"><h3><i>Clubs &amp Volunteer</i></h3></span>
-											</div>
-											<div class="inner">
-												<ul>
-													<li>Computer Science Club</i>
-													<li>Latrobe Revitilization Program</li>
-													<li>Saint Vincent Prevention Projects</li>
-													<li>Big Brothers Big Sister</li>
-												</ul>
+												<p>Assist with monthly reports around University spend. Aided in the automation of multiple reports.</p>
 											</div>
 										</article>
 									</div>
