--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 									<p>Listed below are some recent projects that I've worked on and some information about the project.</p>
 									<div class="features">
 										<article>
-											<a class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a class="image"><img src="images/Discord_Large.png" alt="" /></a>
 											<div class="inner">
 												<h4>Discord Bot</h4>
 												<p>Bot created with the use of JavaScript, Node.js, and SQLite. Use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
 											</div>
 										</article>
 										<article>
-											<a class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a class="image"><img src="images/wedac_logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Westmoreland Drug and Alcohol</h4>
 												<p>App created to spread awareness of overdose prevention kits. Created using JavaScript and the Cross-Platform MobiOne.</p>
