--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 									<p>Listed below are some recent projects that I've worked on and some information about the project.</p>
 									<div class="features">
 										<article>
-											<a class="image"><img src="images/Discord_Large" alt="" /></a>
 											<a class="image"><img src="images/Discord_Large.png" alt="" /></a>
 											<div class="inner">
 												<h4>Discord Bot</h4>
@@ -87,10 +86,9 @@
 											</div>
 										</article>
 										<article>
-											<a class="image"><img src="images/wedac_logo" alt="" /></a>
 											<a class="image"><img src="images/wedac_logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Westmoreland Drug and Alcohol</h4>
+												<h4>Westmoreland Drug and Alcohol Commission</h4>
 												<p>App created to spread awareness for overdose prevention kits. Created using the Cross-Platform MobiOne and JavaScript.</p>
 											</div>
 										</article>
