Added some details about amazon internship.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<header>
 					<span class="image avatar"><img src="images/me.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Michael Schropp</a></h1>
-					<p>Software Development Co-op at Abbott</p>
+					<p>Software Engineer at Amazon</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -54,7 +54,7 @@
 										<h2>About Me</h2>
 										<p>A student looking to experience all aspects of software development and expand my skillset.</p>
 									</header>
-									<p>I'm currently a junior at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages. I have plans to become a developer in the healthcare or financial technology fields, however I am open to all experiences and opportunities.</p>
+									<p>I'm currently a senior at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages and technologies. I am open to all types experiences and opportunities, don't hesitate to contact me using the form below!</p>
 								</div>
 							</section>
 
@@ -102,6 +102,13 @@
 									<h3>Where I've Worked</h3>
 									<div class="features">
 										<article>
+											<div class="work">
+												<span class="worker"><h3><i>Amazon</i></h3></span>
+											</div>
+											<div class="inner">
+												<h4>Software Engineering Intern</h4>
+												<p>Worked within the Amazon Alexa organization to implement multi-modal functionality to an Alexa skill. Experience the skill I worked on by asking "Alexa, What Should I Wear?".
+											</div>
 											<div class="work">
 												<span class="worker"><h3><i>Abbott</i></h3></span>
 											</div>
