Fixed issue with work experience not separating.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 												<h4>Software Engineering Intern</h4>
 												<p>Worked within the Amazon Alexa organization to implement multi-modal functionality to an Alexa skill. Experience the skill I worked on by asking "Alexa, What Should I Wear?".
 											</div>
+										</article>
+										<article>
 											<div class="work">
 												<span class="worker"><h3><i>Abbott</i></h3></span>
 											</div>
