Removed div for employer title and moved the info to a header.

--- a/index.html
+++ b/index.html
@@ -102,28 +102,29 @@
 									<h3>Where I've Worked</h3>
 									<div class="features">
 										<article>
-											<div class="work">
-												<span class="worker"><h3><i>Amazon</i></h3></span>
-											</div>
 											<div class="inner">
+												<h3><i>Amazon</i></h3>
 												<h4>Software Engineering Intern</h4>
-												<p>Worked within the Amazon Alexa organization to implement multi-modal functionality to an Alexa skill. Experience the skill I worked on by asking "Alexa, What Should I Wear?".
+												<p>Worked within the Amazon Alexa organization to implement multi-modal functionality to an Alexa skill. Experience the skill I worked on by asking "Alexa, What Should I Wear?".</p>
 											</div>
 										</article>
 										<article>
-											<div class="work">
-												<span class="worker"><h3><i>Abbott</i></h3></span>
-											</div>
 											<div class="inner">
+												<h3><i>Amazon Web Services</i></h3>
+												<h4>Software Engineering Intern</h4>
+												<p>Worked within the AWS Networking organization. Created solutions for network engineers to facilitate the deployment of changes to devices.</p>
+											</div>
+										</article>
+										<article>
+											<div class="inner">
+												<h3><i>Abbott</i></h3>
 												<h4>Co-op (Software Development)</h4>
 												<p>Use of C#, Appium, and Selenium to create automated tests for OS dependencies on mobile devices.</p>
 											</div>
 										</article>
 										<article>
-											<div class="work">
-												<span class="worker"><h3><i>University of Pittsburgh</i></h3></span>
-											</div>
 											<div class="inner">
+												<h3><i>University of Pittsburgh</i></h3>
 												<h4>Student Data Analyst</h4>
 												<p>Assist with monthly reports around University spend. Aided in the automation of multiple reports.</p>
 											</div>
