Added placeholder for professional writing samples.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 												<p>App created to spread awareness for overdose prevention kits. Created using the Cross-Platform MobiOne and JavaScript.</p>
 											</div>
 										</article>
+										<article>
+											<h4>Professional Writing Samples</h4>
+											<p>Placeholder</p>
+										</article>
 									</div>
 								</div>
 							</section>
@@ -119,7 +123,7 @@
 											<div class="inner">
 												<h3><i>Abbott</i></h3>
 												<h4>Co-op (Software Development)</h4>
-												<p>Use of C#, Appium, and Selenium to create automated tests for OS dependencies on mobile devices.</p>
+												<p>Assisted in creation and execution of tests for a healthcare related mobile application. </p>
 											</div>
 										</article>
 										<article>
