testing a new image

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About Me</a></li>
-						<li><a href="#two">Technologies I've Used</a></li>
-						<li><a href="#three">Some Recent Projects</a></li>
-						<li><a href="#four">Where I've Worked</a></li>
-						<li><a href="#five">Contact</a></li>
+						<li><a href="#aboutme" class="active">About Me</a></li>
+						<li><a href="#tech">Technologies I've Used</a></li>
+						<li><a href="#projects">Some Recent Projects</a></li>
+						<li><a href="#work">Where I've Worked</a></li>
+						<li><a href="#resume">Resume</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -104,6 +105,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Where I've Worked</h3>
+									<p>Have a look at my resume linked <a href="https://drive.google.com/open?id=1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt">here</a> or see below for a brief overview of my work experience.</p>
 									<div class="features">
 										<article>
 											<div class="inner">
@@ -172,7 +174,7 @@
 						<div class="container">
 							<ul class="copyright">
 							<li>Design Modified From: <a href="http://html5up.net">HTML5 UP</a></li>
-							<li>Banner Photo From: <a href="https://commons.wikimedia.org">Wikimedia Commons</li>
+							<li>Banner Photo From: <a href="https://commons.wikimedia.org">Wikimedia Commons</a></li>
 							</ul>
 						</div>
 					</section>
