Reverted image and added in plain language

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#aboutme" class="active">About Me</a></li>
-						<li><a href="#tech">Technologies I've Used</a></li>
-						<li><a href="#projects">Some Recent Projects</a></li>
-						<li><a href="#work">Where I've Worked</a></li>
-						<li><a href="#resume">Resume</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Technologies I've Used</a></li>
+						<li><a href="#three">Some Recent Projects</a></li>
+						<li><a href="#four">Where I've Worked</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -52,7 +51,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>About Me</h2>
+										<h2 style="color:#6266A3">About Me</h2>
 										<p>A student looking to experience all aspects of software development and expand my skillset.</p>
 									</header>
 									<p>I'm currently a senior at the University of Pittsburgh majoring in computer science. I started programming in high school and since then have had exposure to a wide variety of languages and technologies. I am open to all types experiences and opportunities, don't hesitate to contact me using the form below!</p>
@@ -62,7 +61,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Technologies I've Used</h3>
+									<h3 style="color:#6266A3">Technologies I've Used</h3>
 									<p>Below you will see the various languages and softwares I've experienced.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Java, C++, C</li>
@@ -76,26 +75,27 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Some Recent Projects</h3>
+									<h3 style="color:#6266A3">Some Recent Projects</h3>
 									<p>Listed below are some recent projects that I've worked on and some information about the project.</p>
 									<div class="features">
 										<article>
-											<a class="image"><img src="images/Discord_Large.png" alt="" /></a>
 											<div class="inner">
 												<h4>Discord Bot</h4>
 												<p>Bot created with the use of JavaScript, Node.js, and SQLite. Allows users to communicate with the bot, search for images, and gamble points. Use of the Google Search API, the YouTube Data API, and the CleverBot API.</p>
 											</div>
 										</article>
 										<article>
-											<a class="image"><img src="images/wedac_logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Westmoreland Drug and Alcohol Commission</h4>
 												<p>App created to spread awareness for overdose prevention kits. Created using the Cross-Platform MobiOne and JavaScript.</p>
 											</div>
 										</article>
 										<article>
-											<h4>Professional Writing Samples</h4>
-											<p>Placeholder</p>
+											<div class="inner">
+												<h4>Professional Writing Samples</h4>
+												<i><a href="https://drive.google.com/file/d/1n7V53XXWb864GXMWjPIrOwji1IvIZYgV/view?usp=sharing">Plain Language Translation</a></i>
+												<p>It is important to be able to communicate the technical portion of projects clearly. By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
+											</div>
 										</article>
 									</div>
 								</div>
@@ -104,7 +104,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Where I've Worked</h3>
+									<h3 style="color:#6266A3">Where I've Worked</h3>
 									<p>Have a look at my resume linked <a href="https://drive.google.com/open?id=1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt">here</a> or see below for a brief overview of my work experience.</p>
 									<div class="features">
 										<article>
@@ -142,7 +142,7 @@
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
-									<h3>Contact Me</h3>
+									<h3 style="color:#6266A3">Contact Me</h3>
 									<p>Have any questions or want to reach me? Fill out the information below! Alternatively, click the email icon at the bottom of the navigation menu to get a direct link to my email!</p>
 									<form method="post" action="https://formspree.io/mfschropp@gmail.com">
 										<div class="row uniform">
