Added policy paper

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 									<p>Below you will see the various languages and softwares I've experienced.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Java, C++, C</li>
-										<li class="fa-code">HTML, CSS, Javascript, PHP, JQuery, MySQL</li>
-										<li class="fa-cubes">Windows, Mac OS, Linux</li>
+										<li class="fa-code">Ruby, JavaScript, MySQL</li>
+										<li class="fa-cubes">AWS, GCP, Hadoop, Spark</li>
 										<li class="fa-bolt">Sublime, Visual Studio, Eclipse, VIM</li>
 									</ul>
 								</div>
@@ -92,9 +92,16 @@
 										</article>
 										<article>
 											<div class="inner">
-												<h4>Professional Writing Samples</h4>
-												<i><a href="https://drive.google.com/file/d/1n7V53XXWb864GXMWjPIrOwji1IvIZYgV/view?usp=sharing">Plain Language Translation</a></i>
-												<p>It is important to be able to communicate the technical portion of projects clearly. By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
+												<h4>Plain Language Translation</h4>
+												<i><a href="https://drive.google.com/file/d/1n7V53XXWb864GXMWjPIrOwji1IvIZYgV/view?usp=sharing">Example: Plain Language Translation</a></i>
+												<p>It is important to be able to communicate clearly. By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
+											</div>
+										</article>
+										<article>
+											<div class="inner">
+												<h4>Policy Paper</h4>
+												<i><a href="https://drive.google.com/file/d/14nNqAaYNb1vfQ0fdqlHpPcDTiWuf5pmO/view?usp=sharing">Example: Policy Paper</a></i>
+												<p>Another important skill comes from being able to find and communicate clear evidence in support of your decisions. See the above example for a policy paper I wrote in support of delaying high school start times.</p>
 											</div>
 										</article>
 									</div>
