--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 									<h3 style="color:#6266A3">Technologies I've Used</h3>
 									<p>Below you will see the various languages and softwares I've experienced.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Java, C++, C</li>
-										<li class="fa-code">Ruby, JavaScript, MySQL</li>
+										<li class="fa-code">Java, Scala</li>
+										<li class="fa-code">Ruby, C, JavaScript, MySQL</li>
 										<li class="fa-cubes">AWS, GCP, Hadoop, Spark</li>
-										<li class="fa-bolt">Sublime, Visual Studio, Eclipse, VIM</li>
+										<li class="fa-bolt">JUnit, Selenium, MiniTest</li>
 									</ul>
 								</div>
 							</section>
@@ -112,7 +112,10 @@
 							<section id="four">
 								<div class="container">
 									<h3 style="color:#6266A3">Where I've Worked</h3>
-									<p>Have a look at my resume linked <a href="https://drive.google.com/open?id=1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt">here</a> or see below for a brief overview of my work experience.</p>
+									<i><a href="https://drive.google.com/file/d/1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt/view?usp=sharing">Resume</a></i>
+									<br>
+									<i><a href="https://drive.google.com/file/d/1uE5HJZSH2nqzDgVddwVpA_bESp8J847a/view?usp=sharing">Personal Statement</a></i>
+									<p>Have a look at my resume linked above or see below for a brief overview of my work experience.<br>You can also read my personal statement to get an idea of why I chose computer science and how I reached this point.</p>
 									<div class="features">
 										<article>
 											<div class="inner">
