--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 											<div class="inner">
 												<h4>Plain Language Translation</h4>
 												<i><a href="https://drive.google.com/file/d/1n7V53XXWb864GXMWjPIrOwji1IvIZYgV/view?usp=sharing">Example: Plain Language Translation</a></i>
-												<p>It is important to be able to communicate clearly. By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
+												<p>By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
 											</div>
 										</article>
 										<article>
@@ -115,7 +115,6 @@
 									<i><a href="https://drive.google.com/file/d/1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt/view?usp=sharing">Resume</a></i>
 									<br>
 									<i><a href="https://drive.google.com/file/d/1uE5HJZSH2nqzDgVddwVpA_bESp8J847a/view?usp=sharing">Personal Statement</a></i>
-									<p>Have a look at my resume linked above or see below for a brief overview of my work experience.<br>You can also read my personal statement to get an idea of why I chose computer science and how I reached this point.</p>
 									<div class="features">
 										<article>
 											<div class="inner">
