Formatting test again

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 											<div class="inner">
 												<h4>Plain Language Translation</h4>
 												<i><a href="https://drive.google.com/file/d/1n7V53XXWb864GXMWjPIrOwji1IvIZYgV/view?usp=sharing">Example: Plain Language Translation</a></i>
-												<p>By writing in plain language we can ensure that everyone can clearly understand what a project entails. Click the link above to see an example where I translated a portion of a research paper about non-natural gas engines.</p>
+												<p>By writing in plain language we can ensure that everyone can clearly understand what a project entails. See the example above about non-natural gas engines.</p>
 											</div>
 										</article>
 										<article>
@@ -112,10 +112,12 @@
 							<section id="four">
 								<div class="container">
 									<h3 style="color:#6266A3">Where I've Worked</h3>
-									<i><a href="https://drive.google.com/file/d/1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt/view?usp=sharing">Resume</a></i>
-									<br>
-									<i><a href="https://drive.google.com/file/d/1uE5HJZSH2nqzDgVddwVpA_bESp8J847a/view?usp=sharing">Personal Statement</a></i>
 									<div class="features">
+										<article>
+											<i><a href="https://drive.google.com/file/d/1Hx0DW_DMtmompE_34Fy9B-X-oqeyJlyt/view?usp=sharing">Resume</a></i>
+											<br>
+											<i><a href="https://drive.google.com/file/d/1uE5HJZSH2nqzDgVddwVpA_bESp8J847a/view?usp=sharing">Personal Statement</a></i>
+										</article>
 										<article>
 											<div class="inner">
 												<h3><i>Amazon</i></h3>
